added data entry to scenario diagrams