@@ -2,6 +2,7 @@ package org.fulib.servicegenerator;
 
 import org.fulib.yaml.Reflector;
 import org.fulib.yaml.ReflectorMap;
+import org.fulib.yaml.Yaml;
 import org.stringtemplate.v4.ST;
 import org.stringtemplate.v4.STGroup;
 import org.stringtemplate.v4.STGroupFile;
@@ -11,6 +12,8 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.*;
+import static com.codeborne.selenide.Selenide.*;
+
 
 public class FulibScenarioDiagram
 {
@@ -51,7 +54,7 @@ public class FulibScenarioDiagram
       String body = st.render();
 
       try {
-         Files.writeString(Paths.get(htmlFileName), body, StandardOpenOption.CREATE);
+         Files.write(Paths.get(htmlFileName), body.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
       }
       catch (IOException e) {
          e.printStackTrace();
@@ -105,6 +108,14 @@ public class FulibScenarioDiagram
       String serviceName = getServiceName(app);
       ArrayList<String> entryList = laneMap.computeIfAbsent(serviceName, n -> new ArrayList<>());
 
+      String title = serviceName;
+      Reflector reflector = new Reflector().setClazz(app.getClass());
+      Object description = reflector.getValue(app, "description");
+      if (description != null) {
+         title = " " + description;
+         app = reflector.getValue(app, "content");
+      }
+
       StringBuilder lines = new StringBuilder();
 
       ReflectorMap reflectorMap = new ReflectorMap(app.getClass().getPackage().getName());
@@ -113,6 +124,7 @@ public class FulibScenarioDiagram
 
       ST st = group.getInstanceOf("oneScreen");
       st.add("time", time);
+      st.add("title", title);
       st.add("lines", lines.toString());
       String body = st.render();
 
@@ -137,7 +149,21 @@ public class FulibScenarioDiagram
                entryList.add(String.format("[%s]", text));
             }
             else if (entry.startsWith("input")) {
+               // prompt text
                String word = entry.substring("input ".length());
+               // prototype value
+               Object value = reflector.getValue(node, "value");
+               if (value != null) {
+                  word = value.toString();
+               }
+               // gui value
+               try {
+                  String id = (String) reflector.getValue(node, "id");
+                  word = $("#" + id).$("input").getValue();
+               }
+               catch (Exception e) {
+                  // nice try
+               }
                entryList.add(String.format("<u>%s</u>", word));
             }
             else {
@@ -161,5 +187,38 @@ public class FulibScenarioDiagram
       else if (content != null) {
          computeLines(lines, content, reflectorMap);
       }
+   }
+
+   public FulibScenarioDiagram addData(String time, String lane, Collection objects)
+   {
+      StringBuilder lines = new StringBuilder();
+
+      if (objects.size() == 0) {
+         lines.append("<p> no data </p>\n");
+      }
+      else {
+         for (Object object : objects) {
+            lines.append("<p>-");
+            Class<?> clazz = object.getClass();
+            Reflector reflector = new Reflector().setClassName(object.getClass().getName()).setClazz(clazz);
+            for (String property : reflector.getProperties()) {
+               Object value = reflector.getValue(object, property);
+               if (value != null && (value.getClass().isPrimitive() || value.getClass().getName().startsWith("java.lang"))) {
+                  lines.append(" ").append(value);
+               }
+            }
+            lines.append("</p>\n");
+         }
+      }
+
+      ST st = group.getInstanceOf("oneData");
+      st.add("time", time);
+      st.add("data", lines.toString());
+      String body = st.render();
+
+      ArrayList<String> entries = laneMap.computeIfAbsent(lane, l -> new ArrayList<>());
+      entries.add(body);
+
+      return this;
    }
 }
